--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <a href="index.html">Beranda</a>
       <a href="program-kerja.html">Program Kerja</a>
-      <a href="kontak.html">Kontak</a>
+      <a href="index.html">Kontak</a>
     </nav>
   </header>
 
