--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </header>
 
   <main>
-    <h1>Selamat Datang di Website Palang Merah</h1>
-    <p>Bersama kita selamatkan nyawa dan ringankan penderitaan.</p>
+    <h1>Welcome To Official Website PMR Wira Unit Smkn Rembang</h1>
+    <p>⛑️ Siamo Tutti Fratelli ⛑️</p>
     <a href="program-kerja.html">Lihat Program Kerja</a>
   </main>
 
