--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Palang Merah</p>
+    <p>© Copyright By Team Media PMR Revos ©</p>
   </footer>
 </body>
 </html>
