--- a/program-kerja.html
+++ b/program-kerja.html
@@ -84,7 +84,7 @@
   </header>
 
   <main>
-    <h1>Program Kerja Palang Merah</h1>
+    <h1>Program Kerja PMR Unit SMKN Rembang Tahun 2025/2026</h1>
     <ul>
       <li>Donor darah rutin</li>
       <li>Pendidikan kesehatan masyarakat</li>
