--- a/program-kerja.html
+++ b/program-kerja.html
@@ -105,7 +105,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Palang Merah</p>
+    <p>© Copyright By Team Media PMR Revos ©</p>
   </footer>
 
   <!-- Elemen bercak animasi -->
