--- a/kegiatan.html
+++ b/kegiatan.html
@@ -59,7 +59,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Palang Merah</p>
+    <p>© Copyright By Team Media PMR Revos ©</p>
   </footer>
 
   <script>
