--- a/program-kerja.html
+++ b/program-kerja.html
@@ -79,7 +79,7 @@
     <nav>
       <a href="index.html">Beranda</a>
       <a href="program-kerja.html" class="active">Program Kerja</a>
-      <a href="kontak.html">Kontak</a>
+      <a href="kontak.html">Kegiatan</a>
     </nav>
   </header>
 
