--- a/kegiatan.html
+++ b/kegiatan.html
@@ -52,7 +52,7 @@
 
     <!-- Galeri Foto -->
     <div id="gallery" class="gallery">
-      <img src="images/pmr1.jpg" alt="Pertolongan Pertama Siswa Terkena Paku">
+      <img src="IMG_20250910_124235_027.jpg" alt="Pertolongan Pertama Siswa Terkena Paku">
       <img src="images/pmr2.jpg" alt="Kegiatan PMR 2">
       <img src="images/pmr3.jpg" alt="Kegiatan PMR 3">
     </div>
