--- a/program-kerja.html
+++ b/program-kerja.html
@@ -86,11 +86,13 @@
   <main>
     <h1>Program Kerja PMR Unit SMKN Rembang Tahun 2025/2026</h1>
     <ul>
-      <li>Donor darah rutin</li>
-      <li>Pendidikan kesehatan masyarakat</li>
-      <li>Pelatihan pertolongan pertama</li>
-      <li>Bantuan darurat bencana</li>
-      <li>Peningkatan kapasitas relawan</li>
+      <li>Donor darah bersama PMI</li>
+      <li>Penggalangan dana untuk korban bencana</li>
+      <li>Pelatihan kesiap siagaan bencana</li>
+      <li>Lomba video atau poster ala gen z mengenai PP, P3K, Dll</li>
+      <li>Bakti sosial ke panti asuhan atau panti jompo</li>
+      <li>Piket UKS sekolah</li>
+      <li>Menjaga upacara, lbb, dll</li>
     </ul>
 
     <!-- Slider Foto -->
