--- a/program-kerja.html
+++ b/program-kerja.html
@@ -97,7 +97,7 @@
 
     <!-- Slider Foto -->
     <div class="slider-container">
-      <img class="slide" src="WhatsApp Image 2025-09-12 at 14.42.20.jpeg" alt="Pertolongan Pertama">
+      <img class="slide" src="images/WhatsApp Image 2025-09-12 at 14.42.20.jpeg" alt="Pertolongan Pertama">
       <img class="slide" src="images/program2.jpg" alt="Pelatihan Kesehatan">
       <img class="slide" src="images/program3.jpg" alt="Bantuan Bencana">
 
